--- a/_includes/post/comments_link.html
+++ b/_includes/post/comments_link.html
@@ -3,5 +3,5 @@
 {% else %}
   {% assign disqus_identifier = page.disqus_identifier %}
 {% endif %}
-
+{ post.url }
 <span class="comments"><a href="{{ post.url }}#disqus_thread"{% if disqus_identifier %} data-disqus-identifier="{{ disqus_identifier }}"{% endif %}>comments</a></span>
