--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 <ul class="main-navigation">
-  <li><a href="/about/">hakkımda</a></li>
-  <li><a href="/archive">arşiv</a></li>
-  <li><a href="https://github.com/semihkirdinli/semihkirdinli.github.io/issues/new">iletişim</a></li>
-  <li><a href="/contributors">katkıda bulunanlar</a></li>
+  <li><a href="/about/">about</a></li>
+  <li><a href="/archive">archives</a></li>
+  <li><a href="https://github.com/Haacked/feedback/issues/new">contact</a></li>
+  <li><a href="/contributors">contributors</a></li>
 </ul>
 
 {% if site.description %}
